--- a/README.org
+++ b/README.org
@@ -1,2 +1,5 @@
 * TODO pset 1
 SCHEDULED: <2025-09-08 Mon> DEADLINE: <2025-09-10 Wed>
+:LOGBOOK:
+CLOCK: [2025-09-03 Wed 22:00]--[2025-09-03 Wed 22:43] =>  0:43
+:END:
